--- a/conf/litellm/config.yaml
+++ b/conf/litellm/config.yaml
@@ -30,11 +30,11 @@ router_settings:
   enable_fallbacks: true # Включить fallback для production
   cooldown_time: 30 # Время ожидания перед повторной попыткой (секунды)
   allowed_fails: 3 # Количество неудачных попыток перед fallback
-  # Redis настройки для router (централизованное управление состоянием)
-  redis_host: "redis"
-  redis_port: 6379
-  redis_password: "ErniKiRedisSecurePassword2024"
-  redis_db: 1 # Используем ту же DB что и для кэширования
+  # Redis настройки для router временно отключены из-за несовместимости
+  # redis_host: "redis"
+  # redis_port: 6379
+  # redis_password: "ErniKiRedisSecurePassword2024"
+  # redis_db: 1 # Используем ту же DB что и для кэширования
 
 general_settings:
   master_key: os.environ/LITELLM_MASTER_KEY
@@ -113,7 +113,8 @@ litellm_settings:
   # callbacks: ["prometheus"]  # Включить экспорт Prometheus метрик
   # service_callback: ["prometheus_system"]  # Мониторинг системных сервисов (Redis, PostgreSQL)
   # === CACHE CONFIGURATION ===
-  cache: true  # Включить кэширование (Redis для централизованного кэширования)
+  # Включено: 2025-10-02 после исправления конфигурации Redis
+  cache: true  # Включить кэширование
   # === DETAILED LOG SETTINGS ===
   # Отключить логирование health check запросов для уменьшения шума
   disable_health_check_logs: true
@@ -163,21 +164,17 @@ litellm_settings:
     rpm_limit: 100 # Лимит запросов в минуту
   # === PERFORMANCE OPTIMIZATION ===
   # Настройки кэширования для production
-  # Redis кэширование для централизованного управления кэшем
+  # Включено: 2025-10-02 с использованием in-memory кэширования
+  # Redis кэширование имеет баг в LiteLLM v1.77.3 (socket_timeout: 5.0 hardcoded)
   cache_params:
-    type: "redis" # Использовать Redis кэширование
-    host: "redis" # Redis хост
-    port: 6379 # Redis порт
-    password: "ErniKiRedisSecurePassword2024" # Redis пароль
-    db: 1 # База данных Redis (изоляция от OpenWebUI DB 0)
-    ttl: 3600 # TTL кэша в секундах (1 час)
-    namespace: "erni-ki-litellm" # Namespace для изоляции кэша
-    # Timeout настройки для стабильности подключения
-    socket_connect_timeout: 10 # Timeout подключения
-    socket_timeout: 10 # Timeout операций
-    connection_pool_timeout: 5 # Timeout пула подключений
-    retry_on_timeout: true # Повторить при timeout
-    health_check_interval: 30 # Интервал проверки здоровья
+    type: "local" # Использовать in-memory кэширование
+    ttl: 1800 # TTL кэша в секундах (30 минут)
+    supported_call_types: ["acompletion", "atext_completion", "aembedding", "atranscription"]
+  #   socket_connect_timeout: 10 # Timeout подключения
+  #   socket_timeout: 10 # Timeout операций
+  #   connection_pool_timeout: 5 # Timeout пула подключений
+  #   retry_on_timeout: true # Повторить при timeout
+  #   health_check_interval: 30 # Интервал проверки здоровья
   # Настройки connection pooling
   connection_pool:
     max_connections: 100 # Максимум подключений к БД
