fix(tests): resolve Playwright/Vitest conflict and ESLint permission errors
- Обновлен vitest.config.ts: исключены E2E тесты (tests/e2e/**)
- Обновлен package.json: разделены test scripts
  - test:unit - для unit тестов через Vitest
  - test:e2e - для E2E тестов через Playwright
  - test - запускает оба набора тестов
- Обновлен eslint.config.js: добавлены ignores для cache/, .venv/, playwright-artifacts/
- Исправлен playwright.config.ts: использован nullish coalescing (??) вместо ||

Критерии успеха:
✅ E2E тесты запускаются через Playwright без конфликтов
✅ ESLint работает без permission errors
✅ Vitest игнорирует E2E тесты

Closes: P0-1 (Playwright/Vitest конфликт)
Time: 1 hour

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   },
   "scripts": {
     "dev": "vitest",
-    "test": "vitest run --coverage",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "vitest run --coverage",
+    "test:e2e": "playwright test",
     "e2e": "playwright test",
     "e2e:headed": "PW_BASE_URL=https://localhost playwright test --headed --project=chromium",
     "e2e:report": "playwright show-report",
