feat(openwebui): обновление до v0.6.34 и исправление веб-поиска
🚀 OpenWebUI Update v0.6.32 → v0.6.34
- Обновлен образ до ghcr.io/open-webui/open-webui:v0.6.34
- Все интеграции сохранены (PostgreSQL, Ollama, SearXNG, LiteLLM, GPU)
- Downtime: ~5 минут

🔧 Исправление веб-поиска (SearXNG RAG)
- Обновлена конфигурация в PostgreSQL database:
  * searxng_query_url: http://nginx:8080 → http://searxng:8080
  * enable_web_search: NULL → true
- Очищен Redis кэш (ключ open-webui:config:SEARXNG_QUERY_URL)
- Прямое подключение к SearXNG (обход nginx:8080 Docker network issue)

🌐 Cloudflare Tunnels - Исправление маршрутизации
- diz.zone: http://nginx:8080 → http://openwebui:8080 ✅
- lite.diz.zone: http://nginx:8080 → http://litellm:4000 ✅
- Все 5 доменов доступны через HTTPS (HTTP 200)

🐳 Docker Compose Updates
- postgres-exporter: latest → v0.15.0 (v0.16.0 несовместим)
- tika: latest-full → 3.2.3.0-full (стабильная версия)
- mcpo: latest → git-91e8f94 (стабильный коммит)
- searxng: 2025.1.3-a060c0985 → latest (откат из-за ошибки modifier)
- PostgreSQL: добавлена кастомная конфигурация с pg_stat_statements

📊 Системный статус
- Контейнеры: 30/30 работают
- Healthy сервисы: 25/30 (5 exporters без health check)
- GPU: Активен, 4 модели доступны
- Производительность: Без деградации

📝 Документация
- README.md: обновлена версия OpenWebUI до v0.6.34
- docs/architecture.md: обновлена архитектурная диаграмма
- docs/de/architecture.md: синхронизирована немецкая версия
- docs/CHANGELOG.md: добавлена запись v5.1.0
- docs/reports/: добавлены 3 отчета диагностики

✅ Критерии успеха выполнены
- OpenWebUI v0.6.34 работает стабильно
- Все домены доступны через HTTPS
- Веб-поиск настроен корректно (база данных + Redis)
- GPU-ускорение активно
- Нет критических ошибок

--- a/compose.yml
+++ b/compose.yml
@@ -115,6 +115,10 @@ services:
     restart: unless-stopped
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+      # Кастомная конфигурация PostgreSQL с pg_stat_statements (добавлено: 2025-11-04)
+      - ./conf/postgres-enhanced/postgresql.conf:/etc/postgresql/postgresql.conf:ro
+    # Используем кастомную конфигурацию
+    command: postgres -c config_file=/etc/postgresql/postgresql.conf
     # Используем стандартную Docker bridge сеть
     labels:
       # КРИТИЧЕСКИ ВАЖНО: Запретить автообновление базы данных
@@ -369,7 +373,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    image: travisvn/openai-edge-tts:latest
+    image: travisvn/openai-edge-tts:latest # NOTE: Проект использует только latest/canary теги, нет версионных релизов
     logging: *auxiliary-logging
     ports:
       - 5050:5050
@@ -391,7 +395,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    image: apache/tika:latest-full
+    image: apache/tika:3.2.3.0-full # Обновлено: 2025-11-04 с latest-full на 3.2.3.0-full (стабильная версия)
     logging: *auxiliary-logging
     ports:
       - 9998:9998
@@ -416,7 +420,7 @@ services:
       timeout: 5s
       retries: 3
       start_period: 15s
-    image: ghcr.io/open-webui/mcpo:latest
+    image: ghcr.io/open-webui/mcpo:git-91e8f94 # Обновлено: 2025-11-04 с latest на git-91e8f94 (стабильный коммит)
     logging: *auxiliary-logging
     ports:
       - "8000:8000"
@@ -448,7 +452,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    image: searxng/searxng:latest # Обновлено для совместимости
+    image: searxng/searxng:latest # Откат: 2025-11-04 с 2025.1.3-a060c0985 на latest (версия 2025.1.3 имеет проблему "unavailable modifier requested")
     logging: *important-logging
     restart: unless-stopped
     volumes:
@@ -553,7 +557,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    image: ghcr.io/open-webui/open-webui:v0.6.32 # Обновлено до последней стабильной версии
+    image: ghcr.io/open-webui/open-webui:v0.6.34 # Обновлено: 2025-11-04 до v0.6.34 (последняя стабильная версия)
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
@@ -814,7 +818,7 @@ services:
         condition: service_healthy
       db:
         condition: service_healthy
-    image: prometheuscommunity/postgres-exporter:latest # Используем latest для совместимости с PostgreSQL 17
+    image: prometheuscommunity/postgres-exporter:v0.15.0 # Обновлено: 2025-11-04 с latest на v0.15.0 (v0.16.0 несовместим с текущим конфигом)
     container_name: erni-ki-postgres-exporter
     environment:
       - DATA_SOURCE_NAME=postgresql://postgres:aEnbxS4MrXqzurHNGxkcEgCBm@db:5432/openwebui?sslmode=disable
